[gd_scene load_steps=2 format=3 uid="uid://debug_console_ui"]

[ext_resource type="Script" path="res://client/ui/debug_console.gd" id="1_debug_console"]

[node name="DebugConsole" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_debug_console")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Debug Console (F5)"
theme_override_colors/font_color = Color(0, 0.8, 1, 1)

[node name="CloseButton" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "X"

[node name="OutputLabel" type="RichTextLabel" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="InputField" type="LineEdit" parent="Panel/VBox"]
layout_mode = 2
placeholder_text = "Type command... (e.g. /help)"
